k8s/base/study-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: study-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/study-app"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Prefix         /study-app/;
spec:
  rules:
  - http:
      paths:
      - path: /study-app(/|$)(.*)
        backend:
          serviceName: study-app
          servicePort: 80
